Change 'hero' main back to a div, and wrap the whole thing in a main with class 'site-content'. Fixes #1

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -23,9 +23,14 @@ body, html {
 .btn-primary {
 	background-color: $punch;
 	border-color: $punch;
-	&:hover {
+	&:hover, &:click {
 		background-color: $brick-red;
 		border-color: $brick-red;
+	}
+
+	&:visited {
+		background-color: $punch;
+		border-color: $punch;
 	}
 }
 
